Basic registration test and Embedded MySQL for testing

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -7,6 +7,7 @@ log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c 
 
 log4j.appender.systemfile=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.systemfile.File=log/app.log
+log4j.appender.file.MaxFileSize=1MB
 log4j.appender.systemfile.DatePattern='.'yyyy-MM-dd
 log4j.appender.systemfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.systemfile.layout.ConversionPattern=[%p] %d %c %M - %m%n
