--- a/conf/app.properties
+++ b/conf/app.properties
@@ -2,6 +2,8 @@ server.port=8082
 server.workers=2
 server.bosses=2
 
+server.env=dev
+
 db.url=jdbc:mysql://localhost/pokupaka
 db.user=root
 db.password=
