--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, console, systemfile
+log4j.rootLogger=INFO, console, systemfile
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.Target=System.out
