--- a/conf/app.properties
+++ b/conf/app.properties
@@ -4,6 +4,6 @@ server.bosses=2
 
 server.env=dev
 
-db.url=jdbc:mysql://localhost/pokupaka
-db.user=root
-db.password=
+db.url=jdbc:mysql://localhost/selfach
+db.user=selfach
+db.password=sel123
