--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
                 <configuration>
                     <jdbc>
                         <driver>com.mysql.jdbc.Driver</driver>
-                        <url>jdbc:mysql://localhost/selfach?characterEncoding=UTF-8</url>
+                        <url>jdbc:mysql://self.gekoreed.com/selfach?characterEncoding=UTF-8</url>
                         <user>selfach</user>
                         <password>sel123</password>
                     </jdbc>
