--- a/conf/app.properties
+++ b/conf/app.properties
@@ -4,6 +4,6 @@ server.bosses=2
 
 server.env=dev
 
-db.url=jdbc:mysql://46.101.160.177/selfach?characterEncoding=utf-8
+db.url=jdbc:mysql://self.gekoreed.com/selfach?characterEncoding=utf-8
 db.user=selfach
 db.password=sel123
