--- a/conf/app.properties
+++ b/conf/app.properties
@@ -4,6 +4,6 @@ server.bosses=2
 
 server.env=dev
 
-db.url=jdbc:mysql://self.gekoreed.com/selfach?characterEncoding=utf-8
-db.user=selfach
-db.password=sel123
+db.url=jdbc:mysql://ec2-52-91-199-10.compute-1.amazonaws.com/selfach?characterEncoding=utf-8
+db.user=root
+db.password=1111
