--- a/pom.xml
+++ b/pom.xml
@@ -149,9 +149,9 @@
                 <configuration>
                     <jdbc>
                         <driver>com.mysql.jdbc.Driver</driver>
-                        <url>jdbc:mysql://self.gekoreed.com/selfach?characterEncoding=UTF-8</url>
-                        <user>selfach</user>
-                        <password>sel123</password>
+                        <url>jdbc:mysql://localhost/selfach?characterEncoding=UTF-8</url>
+                        <user>root</user>
+                        <password></password>
                     </jdbc>
                     <generator>
                         <name>org.jooq.util.DefaultGenerator</name>
