--- a/conf/app.properties
+++ b/conf/app.properties
@@ -3,6 +3,6 @@ server.workers=2
 server.bosses=2
 
 server.env=dev
-db.url=jdbc:mysql://localhost/selfach?characterEncoding=utf-8
-db.user=root
-db.password=
+db.url=jdbc:mysql://ec2-52-29-3-129.eu-central-1.compute.amazonaws.com/selfach?characterEncoding=utf-8
+db.user=selfach
+db.password=sel123
